--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,6 +134,7 @@
         android:id="@+id/btn_igual"
         android:layout_below="@+id/btn_3"
         android:background="#74d41b"
+        android:textSize="29sp"
         android:layout_alignStart="@+id/btn_3"
         android:layout_marginTop="10dp"  />
 
@@ -146,8 +147,7 @@
         android:layout_below="@+id/btn_2"
         android:layout_alignStart="@+id/btn_2"
         android:layout_marginTop="10dp"
-        android:onClick="borrar"
-        android:elevation="0dp" />
+        android:onClick="borrar" />
 
     <Button
         android:text="@string/suma"
@@ -201,7 +201,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="#74d41b"
-        android:id="@+id/btn_memo"
+        android:id="@+id/btn_ms"
         android:layout_below="@+id/btn_igual"
         android:layout_alignStart="@+id/btn_igual"
         android:layout_marginTop="10dp"
@@ -213,10 +213,22 @@
         android:layout_height="60dp"
         android:background="#74d41b"
         android:id="@+id/btn_mr"
-        android:layout_toEndOf="@+id/btn_memo"
+        android:layout_toEndOf="@+id/btn_ms"
         android:layout_marginStart="15dp"
-        android:layout_alignBottom="@id/btn_memo"
+        android:layout_alignBottom="@id/btn_ms"
         android:onClick="MR"
         android:textSize="20sp" />
+
+    <Button
+        android:text="MeMo"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="#74d41b"
+        android:id="@+id/btn_memoOpera"
+        android:layout_toStartOf="@+id/btn_ms"
+        android:layout_marginEnd="15dp"
+        android:layout_alignBottom="@id/btn_ms"
+        android:textSize="15sp" />
+
 
 </RelativeLayout>
